
2005-07-2005  Bryan Bulten <bryan@bulten.ca>

	* Created new icons using InkScape.  Icons are in SVG format, and were
	converted to XPM.  Eventually these icons should be redone by someone with
	a little more skill ;-) .

2005-06-2005  Bryan Bulten <bryan@bulten.ca>

	* Removed LibraryView, and send specific events to registered windows.
	This is cleaner, since handlers can just use their event tables, and no
	multiple inheritance is necessary.

2005-05-2005  Bryan Bulten <bryan@bulten.ca>

	* Added GPL license statements to source files.

	* Added LibraryView interface for library views.  Adapted PhotoList and
	LookupList to use LibraryView for notifications.

	* Added EVT_PHOTO_SELECTED and EVT_PHOTOS_SELECTED.

2005-03-2005  Bryan Bulten <bryan@bulten.ca>

	* Tested and fixed importing.  Changed to use modification file time
	instead of creation time.

	* Removed external boolean column from photo table.  The filename column
	is now used to indicate whether or not a file is stored externally.

	* Handled year change on TakenCalendar, and made minor refresh fix.

	* Moved repository to BerliOS for public development.

2004-31-2004  Bryan Bulten <bryan@bulten.ca>

	* Began SlideShowDialog.  Can display slide show of selected album with
	specified transition time.

2004-30-2004  Bryan Bulten <bryan@bulten.ca>

	* Finished drag and drop support from PhotoList.  Created PhotoDropEvent
	for drop handlers.  Photos can now be dragged onto locations or albums.

	* Fixed PhotoEvent constructor, so that event type was set correctly.
	Event now works as expected.

2004-29-2004  Bryan Bulten <bryan@bulten.ca>

	* Began EditPage.  Just has a few empty buttons, no real functionality
	yet.  Still deciding whether or not to use a plugin interface for the
	components of the EditPanel.

2004-28-2004  Bryan Bulten <bryan@bulten.ca>

	* Began wxBoxList and wxBoxListItem to simplify logic in the ThumbList
	class.

	* Added TestPage for testing out controls like ThumbList/wxBoxList.
