@@ -29,6 +29,10 @@ dnl wxSqlite + sqlite
 dnl AC_CHECK_HEADERS(sqlite.h)
 dnl AC_CHECK_LIB(sqlite, sqlite_open)
 
+dnl exif
+AC_CHECK_HEADERS("libexif/exif-data.h")
+AC_CHECK_LIB(exif, exif_data_new)
+
 dnl Debugging
 AC_ARG_ENABLE(debug, [  --enable-debug          Compile with debugging information], 
               enable_debug=$enableval, enable_debug=no)
